// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands/bookmark/list should configure properly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "track-list",
      Object {
        "aliases": Array [
          "track-list",
          "trl",
        ],
        "category": "Bookmark",
        "channelRestriction": "guild",
        "description": Object {
          "content": "List the tracked bookmark roles",
          "examples": Array [
            "track-list",
          ],
        },
        "options": Object {
          "permissions": [Function],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`commands/bookmark/list should list the tracked roles 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "<@&1>: 2
<@&3>: 4
",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;
